[project]
name = "testes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fordllm-sdk>=2.2.3",
    "hdbscan>=0.8.42",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
